feat: add liquid, front matter, layouts and includes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello, this is Jitendra
+---
+
+title: Home
+layout: default
+
+---
+
+<h1>{{ "hi!! Welcome to my website where you will learn cool things" | capitalize }}</h1>
