--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ title: Home
 layout: default
 
 ---
-
-<h1>{{ "hi!! Welcome to my website where you will learn cool things" | capitalize }}</h1>
+<div class="home">
+    <h1>{{ "hi!! Welcome to my website where you will learn cool things" | capitalize }}</h1>
+    <h2 class="note">This website is under construction and will be available shortly. Until then you can view my <a href="/Blog.html">Blog</a></h2>
+</div>
