fix: remove capital case for blog html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ layout: default
 ---
 <div class="home">
     <h1>{{ "hi!! Welcome to my website where you will learn cool things" | capitalize }}</h1>
-    <h2 class="note">This website is under construction and will be available shortly. Until then you can view my <a href="/Blog.html">Blog</a></h2>
+    <h2 class="note">This website is under construction and will be available shortly. Until then you can view my <a href="/blog.html">Blog</a></h2>
 </div>
