import theme from steve https://jekyllthemes.io/theme/steve-a-minimal-blog-theme-for-jekyll

--- a/_pages/projects/projects.html
+++ b/_pages/projects/projects.html
@@ -1,10 +1,10 @@
 ---
-
-layout: default
-title: Blog
-
+layout: project
+title: "Projects"
+permalink: "/projects/"
 ---
-<div class="blog">
+
+<div>
     <h1>My Projects</h1>
 
     <ul>
@@ -16,4 +16,3 @@ title: Blog
         {% endfor %}
     </ul>
 </div>
-
